<resources>
    <string name="app_name">IseoAcque</string>

    <string name="home_string">Home</string>
    <string name="explore_string">Località di balneazione</string>
    <string name="star_string">Località preferite</string>
    <string name="classification_string">Classificazione acque</string>
    <string name="link_string">ASL Nuotare Informati </string>
    <string name="settings_string">Impostazioni</string>
    <string name="help_and_feedback"><![CDATA[Help & feedback]]></string>
    <string name="about_string">About</string>

    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="title_activity_my_preferences">MyPreferencesActivity</string>

    <string name="title_activity_about">About</string>
    <string name="title_activity_details">Dettagli</string>
    <string name="localita">Località</string>
    <string name="comune">Comune</string>
    <string name="indirizzo">Indirizzo</string>

    <string name="distanceLoc">Distanza dalla località</string>
    <string name="locAdd">Località aggiunta ai preferiti</string>
    <string name="locRem">Località rimossa ai preferiti</string>

<!-- dialog alert connection and toast message-->
    <string name="titleDialog">Connessione Internet assente</string>
    <string name="descDialog">La prima volta è necessaria una connessione Internet per usare l\'applicazione.  </string>
    <string name="connButton">Esci </string>
    <string name="exitToast">Premere ancora il tasto INDIETRO per uscire dall\'app</string>
    <string name="zoomMap">Centramento mappa …</string>
    <string name="update">Aggiornamento in corso…</string>

    <string name="first">12 ore</string>
    <string name="second">1 giorno</string>
    <string name="third">1 setimana</string>


    <string name="action_home">Zoom su tutti i punti di balneazione</string>
    <string name="action_filter">Filtro</string>
    <string name="action_terrain">Stile Mappa</string>
    <string name="action_info">Legenda</string>
    <string name="action_refresh">Aggiorna Dati</string>
    <string name="action_search">Ricerca punto di balneazione</string>

    <string name="water_high">Eccellente</string>
    <string name="water_good">Buona</string>
    <string name="water_suff">Sufficiente</string>
    <string name="water_poor">Scarsa</string>
    <string name="prohibition">Divieto temporaneo</string>

    <string name="search_hint">Ricerca per Località o Comune … </string>
    <string name="empty_list">Nessun risultato trovato</string>
    <string name="empty_list_star">Nessuna località preferita</string>

    <string name="noConnection">Connessione necessaria per aggiornare il Database</string>
    <string name="updateOK">Aggiornamento effettuato</string>
    <string name="noUpdate">Dati già aggiornati</string>

    <!-- Dialog information -->
    <string name="titleLegend">Legenda</string>
    <string name="map_sat">Mappa satellitare</string>
    <string name="map_str">Mappa stradale</string>
    <string name="zoom_iseo">Zoom sul lago d\'Iseo</string>
    <string name="qlt_f">Qualità dell\'acqua: </string>
    <string name="qlt">Qualità acqua: </string>
    <string name="qlt_ecc">Qualità acqua: Eccellente</string>
    <string name="qlt_buo">Qualità acqua: Buona</string>
    <string name="qlt_suf">Qualità acqua: Sufficiente</string>
    <string name="qlt_sca">Qualità acqua: Scarsa</string>
    <string name="title_activity_help">HelpActivity</string>

   <!-- Nuotare informati -->
    <string name="link1">www.balneazionelagoiseo.it</string>
    <string name="link2">www.portaleacque.salute.gov.it</string>
    <string name="link3">www.asl.bergamo.it</string>
    <string name="linkdescription">L’Osservatorio sulla Qualità delle Acque del Sebino, istituito dall‘ASL della Provincia di Bergamo e dal Comune di Lovere, gestisce un sito internet per comunicare le informazioni utili sulla qualità delle acque di balneazione.</string>


    <string name="descriptionAcque">Per la valutazione e l\'attribuzione dello stato di qualità delle acque di balneazione (scarso, sufficiente, buono o eccellente) la normativa stabilisce l\'utilizzo di due indicatori microbiologici:</string>
    +    <string name="indicatori">1. Escherichia coli\n2. Enterococchi intestinali</string>
    <string name="descriptionAcque2">Questi parametri microbiologici rappresentano la migliore corrispondenza possibile tra inquinamento di origine fecale e ripercussioni per la salute nelle acque destinate a scopi ricreativi</string>
    <string name="descriptionAcque3">VALUTAZIONE DELLE ACQUE DI BALNEAZIONE INTERNE</string>
    <string name="descriptionAcque4">(*) basato sulla valutazione al 95° percentile\n(**) basato sulla valutazione al 90° percentile</string>
    <string name="descriptionAcque5">VALORE LIMITE</string>
    <string name="descriptionAcque6">Al fine di garantire un adeguato livello di tutela della salute dei bagnanti, per le acque classificate ad inizio stagione balneabili la normativa, stabilisce a livello analitico un “valore limite”, il cui superamento impone l’obbligo di immediata adozione del provvedimento di divieto temporaneo di balneazione.</string>
    <!-- Preferenze-->
    <string name="vistaSat">Vista satellitare</string>
    <string name="descVistaSat">Se selezionata, imposta la mappa satellitare come predefinita all’apertura dell’app</string>
    <string name="strRefresh">Frequenza aggiornamento dati</string>
    <string name="descRefresh">Selezionare il tempo minimo tra un aggiornamento e l\'altro (Default 12 ore)</string>

    <!-- Servizi -->
    <string name="allServices">Area Picnic,Parco giochi,Servizi Igienici,Bar,Ristorante,Parcheggio,Area campeggio,Pista ciclabile,Area verde,Accesso cani,Accessibilità,Attracco barche</string>
    <string name="title_activity_activity__filter">Activity_Filter</string>

    <!-- filter -->
    <string name="title_filter">Seleziona i servizi essenziali per te!</string>
    <string name="neutral_button">Reset</string>
    <string name="negative_button">Annulla</string>
    <string name="noFilter">Nessun filtro attivo</string>
    <string name="yesFilter">Filtro attivo:</string>



    <!-- Informazioni utili -->
    <string name="allInfo">Guardia medica,Farmacia,Ospedale,Carabinieri,Polizia provinciale,Polizia locale</string>
    <string name="tel">Telefono</string>

</resources>
