<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:checked="true"
            android:icon="@drawable/ic_home_white_24dp"
            android:title="@string/home_string"
             />

        <item
            android:id="@+id/explore"
            android:checked="false"
            android:icon="@drawable/ic_explore_white_24dp"
            android:title="@string/explore_string" />

        <item
            android:id="@+id/star"
            android:checked="false"
            android:icon="@drawable/ic_star_white_24dp"
            android:title="@string/star_string" />

        <item
            android:id="@+id/classification"
            android:checked="false"
            android:icon="@drawable/ic_invert_colors_white_24dp"
            android:title="@string/classification_string" />

        <item
            android:id="@+id/link"
            android:checked="false"
            android:icon="@drawable/ic_asl_24dp"
            android:title="@string/link_string" />

        <group android:id="@+id/subgroup">
                <item
                    android:id="@+id/settings"
                    android:icon="@drawable/ic_settings_white_24dp"
                    android:title="@string/settings_string" />
                <item
                    android:id="@+id/help"
                    android:icon="@drawable/ic_help_white_24dp"
                    android:title="@string/help_and_feedback" />
                <item
                    android:id="@+id/about"
                    android:icon="@drawable/ic_info_white_24dp"
                    android:title="@string/about_string" />
        </group>
    </group>
</menu>