<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.inserrafesta.iseomap.fragment.WaterFragment">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:weightSum="1">

    <TextView

        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_gravity="fill_horizontal"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:textColor="#727272"
        android:text="@string/descriptionAcque"
        android:textSize="18sp"
        android:paddingLeft="20dp"
        android:layout_weight="0.05"
        android:paddingTop="20dp"
        android:paddingRight="20dp" />
    <TextView
        android:id="@+id/link1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:text="@string/indicatori"
        android:textSize="18sp"
        android:paddingLeft="20dp"
        android:layout_weight="0.05"
        android:gravity="left"
        android:autoLink="web"
        android:layout_gravity="center_vertical"
        android:paddingTop="10dp" />

    <TextView
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_gravity="fill_horizontal"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:textColor="#727272"
        android:text="@string/descriptionAcque2"
        android:textSize="18sp"
        android:paddingLeft="20dp"
        android:layout_weight="0.05"
        android:paddingTop="10dp"
        android:paddingRight="20dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="20dp"
        android:text="@string/descriptionAcque3"
        android:textSize="18sp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="#0776b8"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tabella"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descriptionAcque4"
            android:gravity="left"
            android:layout_gravity="center"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="20dp"
        android:text="@string/descriptionAcque5"
        android:textSize="18sp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="#0776b8"/>
    <TextView
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_gravity="fill_horizontal"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:textColor="#727272"
        android:text="@string/descriptionAcque6"
        android:textSize="18sp"
        android:paddingLeft="20dp"
        android:layout_weight="0.05"
        android:paddingTop="5dp"
        android:paddingRight="20dp" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/limite"
            android:layout_gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>
</LinearLayout>
</ScrollView>