<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >
 
    <ImageView
        android:id="@+id/imageT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_satellite_white_36dp"
        android:layout_above="@+id/image1star"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="33dp"
        android:layout_marginStart="33dp"
        android:layout_marginBottom="21dp" />
 
    <TextView
        android:id="@+id/textT"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFF"
        android:text="@string/map_sat"
        android:layout_toRightOf="@+id/imageT"/>

    <ImageView
        android:id="@+id/imageS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_street_white_36dp"
        android:layout_above="@+id/image0star"
        android:layout_alignLeft="@+id/textZoom"
        android:layout_alignStart="@+id/textZoom" />

    <TextView
        android:id="@+id/textS"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFF"
        android:text="@string/map_str"
        android:layout_toRightOf="@+id/imageS"/>

    <ImageView
        android:id="@+id/imageZoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_gps_fixed_white_36dp"
        android:layout_above="@+id/image0star"
        android:layout_toRightOf="@+id/imageT"
        android:layout_toEndOf="@+id/imageT" />

    <TextView
        android:id="@+id/textZoom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFF"
        android:text="@string/zoom_iseo"
        android:layout_toRightOf="@+id/imageZoom"/>

    <ImageView
        android:id="@+id/image0star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/marker0"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/text0star"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFF"
        android:layout_below="@+id/text2star"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:id="@+id/image1star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/marker1"
        android:layout_marginBottom="40dp"
        android:layout_alignBottom="@+id/dialogButtonOK"
        android:layout_alignRight="@+id/imageT"
        android:layout_alignEnd="@+id/imageT" />

    <TextView
        android:id="@+id/text2star"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFF"
        android:layout_alignTop="@+id/imageT"
        android:layout_alignLeft="@+id/textT"
        android:layout_alignStart="@+id/textT" />

    <Button
        android:id="@+id/dialogButtonOK"
        android:layout_width="100px"
        android:layout_height="wrap_content"
        android:text=" Ok "
        android:layout_marginTop="147dp"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/textT"
        android:layout_alignEnd="@+id/textT"
        android:layout_marginRight="59dp"
        android:layout_marginEnd="59dp" />
 
</RelativeLayout>